2005-01-07  Neal H. Walfield  <neal@gnu.org>

	* output.h (debug): Preface __VA_ARGS__ with ## thereby making it
	optional.

2004-11-17  Neal H. Walfield  <neal@gnu.org>

	* Makefile.am (bootdir): New variable.
	(boot_PROGRAMS): Use this instead of noinst_PROGRAMS.

2004-11-17  Neal H. Walfield  <neal@gnu.org>

	* output.h (debug): Include program_name and __FUNCTION__ in
	output.

2004-11-02  Marcus Brinkmann  <marcus@gnu.org>

	* wortel.c (deva_master): New global variable.
	(serve_bootstrap_requests): New variable CUR_DEVA.  Handle
	WORTEL_MSG_GET_DEVA_CAP_REQUEST and WORTEL_MSG_GET_DEVA_CAP_REPLY.
	When replying to deva's bootstrap request, give it all the info we
	have.
	
	* wortel.c (start_elf): Initialize PHYS_STARTUP->task.

2004-11-01  Marcus Brinkmann  <marcus@gnu.org>

	* wortel.h (wortel_get_cap_reply, wortel_get_task_cap_reply,
	wortel_get_deva_cap_reply): Remove unused variable NR_THREADS.
	* wortel.c (start_elf): Remove unused variable min_page_size.
	(start_elf): Add parentheses to silence gcc warning.  Change
	format string to match argument.
	(serve_bootstrap_requests): Initialize bootstrap_final_physmem and
	bootstrap_final_task.

2004-10-28  Marcus Brinkmann  <marcus@gnu.org>

	* wortel.h: Include <stdbool.h>.
	(WORTEL_MSG_GET_TASK_CAP): Renamed into
	WORTEL_MSG_BOOTSTRAP_FINAL.
	(WORTEL_MSG_GET_DEVA_CAP_REQUEST, WORTEL_MSG_GET_DEVA_CAP_REPLY):
	Define new macros.
	(wortel_get_deva_cap_request, wortel_get_deva_cap_reply,
	wortel_bootstrap_final): New functions.
	(wortel_get_task_cap): Removed.
	* wortel.c (start_elf, start_deva): New functions.
	(start_task): Bunch of it is now in start_elf.
	(serve_bootstrap_requests): Handle WORTEL_MSG_BOOTSTRAP_FINAL, not
	WORTEL_MSG_GET_TASK_CAP.  Implement support for starting deva.
	Implement WORTEL_MSG_GET_DEVA_CAP_REQUEST and
	WORTEL_MSG_GET_DEVA_CAP_REPLY.
	* wortel-intern.h (struct wortel_module): New member deva.

2004-10-27  Marcus Brinkmann  <marcus@gnu.org>
